@startuml DomainModel
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.5
'!theme toy



class Owner {}


class Pet {}

class PetType {}

class BirthDate {}



class Vet {}

class Speciality {}


class Visit {}

class VisitDate {}


Pet "*" ---> "1" PetType: belongs
Pet "1" o--- "1" BirthDate: has
Visit "1" o--- "1" VisitDate: has
Vet "*" ---> "*" Speciality: possesses
Pet "*" --- "1" Owner: owned >
Visit "*" --- "1" Pet: belongs >

@enduml
